# src/routes/index.js
@@ -1,12 +1,12 @@
 const nconf = require("nconf");
 
 const authRoutes = require("./auth.js");
-const assessmentRoutes = require("./assessment.js");
+const visitRoutes = require("./visit.js");
 const settingRoutes = require("./settings.js");
 module.exports = (app) => {
   const baseVersion = nconf.get("BASE_VERSION");
 
   app.use(`/api/${baseVersion}/auth`, authRoutes);
-  app.use(`/api/${baseVersion}/assessment`, assessmentRoutes);
+  app.use(`/api/${baseVersion}/visit`, visitRoutes);
   app.use(`/api/${baseVersion}/setting`, settingRoutes);
 };
